Prevent clock time from shifting width size.

--- a/styles/main.css
+++ b/styles/main.css
@@ -75,6 +75,7 @@ body {
 
 .clock-time {
     font-size: 40px;
+    font-variant-numeric: tabular-nums;
 }
 
 .clock-unit {
